--- a/main1.css
+++ b/main1.css
@@ -1,4 +1,11 @@
 body{
     font-family=cursive;
-    background=
+    background=black;
+    radius=3rem;
+    color=red;
+}
+h1{
+    background=red;
+    color=black;
+    radius=0,3rem;
 }
