--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 button{
-    background:rgba(255, 255, 255, 0,5);
-    margin: 50px;
-    border-radius: 5px;
-    border-color: black;
+    background:rgba(0, 0, 0, 0,7);
+    margin: 1.5rem 1rem;
+    border-radius: 7px;
+    border-color: red;
     color: black;
 }
 html{
