--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ html{
     background: black;
 }
 body{
-    background: url(linux.png);
+    background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
     
 }
 .p{
