--- a/main.css
+++ b/main.css
@@ -13,7 +13,8 @@ html{
 }
 body{
     background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
-    background-size: 100% 100%;
+    background-size: cover;
+    background-position: center;
 }
 .p{
     font-family: Impact, Haettenschweiler;
