--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 button{
-    background:rgba(0, 0, 0, 0,7);
+    background:rgba(0, 0, 0, 0,3);
     margin: 1.5rem 1rem;
     border-radius: 7px;
     border-color: red;
@@ -21,6 +21,5 @@ body{
     color:rgba(244, 255, 0, 0.8);
     padding: 3rem;
     font-size: 3rem;
-    padding-left: 30rem;
-    padding-top: 18rem;
+    text-align: center;
 }
