--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ html{
 body{
     background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
     background-size: contain;
-    padding-bottom: 3rem
+    padding: 10rem;
 }
 .p{
     font-family: Impact, Haettenschweiler;
