--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 button{
-    background:rgba(0, 0, 0, 0,3);
+    background:rgba(1, 1, 1, 0,3);
     margin: 1.5rem 1rem;
     border-radius: 7px;
     border-color: red;
@@ -9,7 +9,7 @@ a{
     font-style:none;
 }
 html{
-    background: black;
+    background:rgb(40, 40, 40);
 }
 body{
     background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
