--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 button{
     background:rgba(20, 20, 20, 0.3);
-    margin: 3rem 2rem;
+    margin: 50px 50px;
     border-radius: 7px;
     border-color: red;
     color: black;
@@ -14,7 +14,7 @@ html{
 }
 body{
     background: url(997f83ab-410a-4bf1-995d-89b618cacbb4.jpeg);
-    background-size: contain;
+    background-size: cover;
     margin: 10rem;
     border-radius: 1rem;
 }
