--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ a{
     font:Arial;
     font-style: none;
     color: rgba(0, 255, 0, 0.3);
+    font-size: 1rem;
 }
 html{
     background:rgb(10, 10, 10);
